[gd_scene load_steps=4 format=3 uid="uid://dd2mmddqms16h"]

[ext_resource type="Script" path="res://destination/destination.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dfe2qdcy4563p" path="res://destination/light.svg" id="2_irnmu"]

[sub_resource type="CircleShape2D" id="1"]
radius = 5000.0

[node name="destination" type="Area2D"]
script = ExtResource("1")

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="point_light" type="PointLight2D" parent="."]
texture = ExtResource("2_irnmu")
texture_scale = 42.0

[node name="audio_stream_player" type="AudioStreamPlayer2D" parent="."]
max_distance = 32000.0
attenuation = 4.0
bus = &"space_sound"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
